[gd_scene load_steps=11 format=3 uid="uid://cm325e0w41j3h"]

[ext_resource type="Script" uid="uid://d3h8sn6d8h0gc" path="res://scripts/entities/BaseEnemy.gd" id="1_w51s3"]
[ext_resource type="PackedScene" uid="uid://b5w5j3y5w5j3y" path="res://scenes/ui/HealthBar.tscn" id="2_abcde"]

[sub_resource type="CircleShape2D" id="CircleShape2D_abcde"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l6aj4"]
radius = 3.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_heal"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_heal_scale"]
_data = [Vector2(0, 0.5), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_heal"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0, 0.6494519, 0.6889623, 1, 0.61571294, 0.93308246, 0.96100765, 1, 0.7, 1, 0.9, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_summon"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_summon_scale"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.4, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_summon"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0.9, 0.5, 1, 0.8, 0.5, 1, 0.8, 0.5, 0.3, 0.8, 0)

[node name="BaseEnemy" type="CharacterBody2D" node_paths=PackedStringArray("health_bar")]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_w51s3")
health_bar = NodePath("HealthBar")
separation_strength = 75.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.25, 0.25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_abcde")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_abcde")

[node name="HealthBar" parent="." instance=ExtResource("2_abcde")]
offset_right = 60.0

[node name="AttackTimer" type="Timer" parent="."]

[node name="SeparationDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeparationDetector"]
shape = SubResource("CircleShape2D_l6aj4")
debug_color = Color(0.8519316, 0.36708492, 0.15484712, 0.41960785)

[node name="BuffParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_heal")
emitting = false
amount = 15
lifetime = 0.6
preprocess = 0.5
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector2(0, -1)
spread = 12.0
gravity = Vector2(0, -1)
initial_velocity_min = 10.0
initial_velocity_max = 30.0
scale_amount_max = 2.0
scale_amount_curve = SubResource("Curve_heal_scale")
color_ramp = SubResource("Gradient_heal")

[node name="SlowParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_summon")
emitting = false
amount = 25
lifetime = 1.5
preprocess = 0.5
randomness = 0.3
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector2(0, -1)
spread = 20.0
gravity = Vector2(0, 20)
initial_velocity_max = 20.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_summon_scale")
color_ramp = SubResource("Gradient_summon")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
